# geometric-industrial-reconstruction

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
recon/: __init__.py  benchmark_parts.py  config.py  generate_dataset.py  geometry.py  io_utils.py  make_figures.py  make_videos.py  pipeline.py  primitives.py  run_pipeline.py  styles.py  types.py  visualization.py
tests/: test_geometry.py  test_guided_primitives.py  test_make_figures.py  test_pipeline_registration.py  test_primitives.py  test_visualization.py
